Use common workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,13 @@
-name: Build
-
+name: Test
 on:
   push:
     branches:
-      - main
   pull_request:
   schedule:
     - cron: '11 1 * * 1'
 
 jobs:
-  plugin_test:
-    name: asdf plugin test
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: asdf_plugin_test
-        uses: asdf-vm/actions/plugin-test@v1
-        with:
-          command: tfenv
+   test:
+    uses: carlduevel/asdf-plugin-build-harness/.github/workflows/build.yml@master
+    with:
+      command: tfenv
